fix clippi script, display

--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,15 @@ html, body {
     display: none;
 }
 
+.clippiWin {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 175px !important;
+    height: 100% !important;
+    transform: none !important;
+    pointer-events: none;
+}
 .clippiWin, .clippiWin .wb-header, .clippiWin .wb-body {
     background: none;
     box-shadow: none !important;
@@ -166,7 +175,8 @@ html, body {
     margin-left: 5px;
 }
 .wisdom {
-    position: relative;
+    position: absolute;
+    bottom: 230px;
     background-color: #ffffcb;
     color: #000;
     border: 1px solid #000;
@@ -178,8 +188,8 @@ html, body {
 .wisdom:before {
     content: '';
     position: absolute;
-    bottom: -3px;
-    right: 22px;
+    bottom: -2px;
+    right: 30px;
     width: 0;
     height: 0;
     border: 14px solid transparent;
@@ -193,7 +203,7 @@ html, body {
     content: '';
     position: absolute;
     bottom: 0;
-    right: 23px;
+    right: 31px;
     width: 0;
     height: 0;
     border: 12px solid transparent;
@@ -204,17 +214,15 @@ html, body {
     margin-bottom: -12px;
 }
 .wisdom a {
-    display: inline-block;
-    float: right;
     text-decoration: underline;
     cursor: pointer;
+    pointer-events: initial;
 }
 .clippi {
-    width: 100%;
-    height: 100%;
-    max-height: calc(100% - 3em);
-    object-fit: contain;
-    object-position: top;
+    position: absolute;
+    width: 150px;
+    left: 0;
+    bottom: 4px;
 }
 
 .scroll-up {
